# erisv4

./: .env.example  .gitignore  CIP_PATENT_REVIEW.md  COCKPIT.md  ERIS_VALIDATION_PROMPT.md  HANDOFF.md  KEEP_ERIS_ONLINE.md  ORCHESTRATION_FINDINGS.md  README.md  REMEDIATION_V4.1.md  REMOTE_ACCESS.md  UNREAL_INTEGRATION.md  UPGRADE_ROADMAP.md  VALIDATION_EXPERIMENTS_PROMPT.md  VALIDATION_PROMPT.md  VISION_ROADMAP.md  WILLOW_BACKEND.md  WILLOW_UNREAL_GUIDE.md  WORKLOG.md  add_romancave.py  bcdc_engine.py  bench_orchestration.py  build_dream_env.py  build_dream_world.py  build_html.py  build_vegas_sphere.py  check_map.py  check_stitched.py  check_widget.py  delete_broken_assets.py  disable_possess.py  duplicate_widgets.py  eris_llm_server.py  eris_unreal_osc.py  find_all_ancient_maps.py  find_ancient_maps.py  find_grass.py  find_romancave_maps.py  fix_cupy.py  fix_numpy.py  (+40 more)
archive/: stitch_scenes.py
bcdc_out/: bcdc_metrics.csv  bcdc_summary.json  brownian_validation.json
docs/: REMEDIATION_ROADMAP.md  ablation_redteam_2026-06.md  architecture_audit_2026-06.md  benchmarks.md  cognitive_functions.md  contractor_gateway_layer.md  security_attack_surface_2026-06.md
eris/: __init__.py  config.py  env_file.py  orchestrator.py
eris-ui/: index.html  package.json  vite.config.ts
scripts/: generate_pde.py
tests/: test_ablation.py  test_accelerator_egress.py  test_accelerators.py  test_adversarial_hive.py  test_agent_loop.py  test_agent_tools.py  test_agents.py  test_arbiter.py  test_audio_frontend.py  test_audio_harness.py  test_audit_phase_a.py  test_audit_phase_b.py  (+79 more)
(+686 files in other folders)
