[project]
name = "eris-echo"
version = "4.0.0a1"
description = "Eris Echo v4 — Cognitive architecture built from BLECD/FRACTAL/SGT first principles"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "faiss-cpu>=1.7",  # GPU version added manually if available
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=13.0",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends._legacy:_Backend"
